# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  28 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-daemon.sh: 
  Correction of return code for execute_phases w/ logging.

  26 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Fixed a bug in
  graph_display.use_flags().

  24 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Fixed a bug in
  the relevant package calculation for dep display.

  24 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Added the removal
  of fully installed dependency subtrees causing faster calculation due to less
  circular dependencies.

  23 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: --columns
  support is in and working. Algorithm has changed a little so that the minimum
  space is used while keeping 2 spaces between all columns.

  23 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Added class
  graph_display and moved most of depgraph.display() into various functions
  of it. --columns and --resume are not yet supported with it, so the
  depgraph.display() has been kept for the time being.

  23 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Commented
  the deprecation notice for /etc/portage/virtuals as it does not yet have
  a newer counterpart.

  22 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/transports/fetchcommand.py:
  spawn_bash, not spawn.

  22 Nov 2004; Brian Harring <ferringb@gentoo.org> src/filter-env/posix.c:
  Anchor generated regex filters, fix to the damned looping over stdin still.

  22 Nov 2004; Brian Harring <ferringb@gentoo.org> src/filter-env/posix.c:
  Final bugs should be shaken out of the pipe reading now.