@@ -12,19 +12,7 @@ if [ ! -d "${D}${EXEDESTTREE}" ] ; then
 	install -d "${D}${EXEDESTTREE}"
 fi
 
-if [ ! -z "${CBUILD}" ] && [ "${CBUILD}" != "${CHOST}" ]; then
-	STRIP=${CHOST}-strip
-else
-	STRIP=strip
-fi
-
 for x in "$@" ; do
-	if [ "${FEATURES//*nostrip*/true}" != "true" ] && [ "${RESTRICT//*nostrip*/true}" != "true" ] ; then
-		MYVAL=`file "${x}" | grep "ELF"` 
-		if [ -n "$MYVAL" ] ; then
-			${STRIP} "${x}"
-		fi
-	fi
 	if [ -L "${x}" ] ; then
 		cp "${x}" "${T}"
 		mysrc="${T}"/`/usr/bin/basename "${x}"`
